--- a/Backend/bin/src/main/resources/application.properties
+++ b/Backend/bin/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8089
 
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=scott
+spring.datasource.password=tiger
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+			
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto = create
