--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8089
+server.port=8082
 
 #Shashi
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
@@ -13,5 +13,5 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 #spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 			
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
