--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-server.port=8089
+server.port=8081
 
 #Shashi
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
-spring.datasource.username=scott
-spring.datasource.password=tiger
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-
-#Aneesha
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
 #spring.datasource.username=scott
 #spring.datasource.password=tiger
 #spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
+#Aneesha
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=scott
+spring.datasource.password=tiger
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 			
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = create
