--- a/Backend/bin/src/main/resources/application.properties
+++ b/Backend/bin/src/main/resources/application.properties
@@ -16,3 +16,14 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = update
 
+spring.mail.properties.mail.smtp.connecttimeout=50000
+spring.mail.properties.mail.smtp.timeout=30000
+spring.mail.properties.mail.smtp.writetimeout=50000
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=contact.ltibankingservices@gmail.com
+spring.mail.password=bank@123
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smpt.auth=true
+spring.mail.transport.protocol=smtp
+spring.mail.from.email=contact.ltibankingservices@gmail.com
