--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -8,9 +8,15 @@ server.port=8084
 #spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 #Aneesha
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.username=scott
-spring.datasource.password=tiger
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+#spring.datasource.username=scott
+#spring.datasource.password=tiger
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
+#Sathwika
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ose
+spring.datasource.username=system
+spring.datasource.password=Sathwika98
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 			
 spring.jpa.show-sql=true
