--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -13,10 +13,16 @@ server.port=8084
 #spring.datasource.password=tiger
 #spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
-#Sathwika
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ose
+##Sathwika
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ose
+#spring.datasource.username=system
+#spring.datasource.password=Sathwika98
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
+#Kshitij
+spring.datasource.url=jdbc:oracle:thin:@localhost:1524:orcl
 spring.datasource.username=system
-spring.datasource.password=Sathwika98
+spring.datasource.password=Badblood04
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 			
 spring.jpa.show-sql=true
