--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 server.port=8084
 
 #Shashi
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
+#spring.datasource.username=scott
+#spring.datasource.password=tiger
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
-spring.datasource.username=scott
-spring.datasource.password=tiger
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
 #spring.datasource.username=scott
 #spring.datasource.password=tiger
@@ -19,10 +19,10 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 #spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 ##Sathwika
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ose
-#spring.datasource.username=system
-#spring.datasource.password=Sathwika98
-#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ose
+spring.datasource.username=system
+spring.datasource.password=Sathwika98
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 #Kshitij
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1524:orcl
